####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = kdenlive_renderer
kdenlive_renderer_CFLAGS = @LIBMLT_CFLAGS@
kdenlive_renderer_SOURCES = kdenlive_renderer.c

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
kdenlive_renderer_LDFLAGS = $(all_libraries) @LIBMLT_LIBS@
